Another FindBugs suggestion applied.